inserido algumas informações de compra

--- a/compra.html
+++ b/compra.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,11 @@
     <title>Compra</title>
 </head>
 <body>
+    <h1>Escolha o que você quer comprar</h1>
+
+    <p>Casa</p>
+    <p>Carro</p>
     
+    <a href="index.html">Voltar ao menu pincipal</a>
 </body>
 </html>
