--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,9 @@
     <title>Bem vindo!</title>
 </head>
 <body>
+    <h1>Bem vindo a nossa loja</h1>
+
+    <a href="compra.html">Compras</a>
     
 </body>
 </html>
