modificado algumas informações de produtos a serem comprados e vendidos

--- a/compra.html
+++ b/compra.html
@@ -9,8 +9,10 @@
 <body>
     <h1>Escolha o que você quer comprar</h1>
 
-    <p>Casa</p>
-    <p>Carro</p>
+    <li>Celulares</li>
+    <li>infotmática</li>
+    <li>móveis</li>
+    <li>eletrodomésticos</li><br>
     
     <a href="index.html">Voltar ao menu pincipal</a>
 </body>
