--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Bem vindo a nossa loja</h1>
 
-    <a href="compra.html">Compras</a>
+    <a href="compra.html">Compras</a><br>
+    <a href="venda.html">Vendas</a>
     
 </body>
 </html>
