--- a/venda.html
+++ b/venda.html
@@ -7,6 +7,14 @@
     <title>Venda</title>
 </head>
 <body>
-    
+    <h1>Escolha o quer vender?</h1>
+
+    <li>Celulares</li>
+    <li>infotmática</li>
+    <li>móveis</li>
+    <li>eletrodomésticos</li><br> 
+
+    <a href="index.html"> Voltar ao menu principal</a>
+
 </body>
 </html>
