--- a/compra.html
+++ b/compra.html
@@ -7,13 +7,14 @@
     <title>Compra</title>
 </head>
 <body>
-    <h1>Escolha o que você quer comprar</h1>
+    <h1>Escolha o que você quer comprar?</h1>
 
     <li>Celulares</li>
     <li>infotmática</li>
     <li>móveis</li>
     <li>eletrodomésticos</li><br>
     
-    <a href="index.html">Voltar ao menu pincipal</a>
+    <a href="index.html">Voltar ao menu pincipal</a><br>
+    <a href="obrigado.html">Sair</a>
 </body>
 </html>
