--- a/venda.html
+++ b/venda.html
@@ -14,7 +14,8 @@
     <li>móveis</li>
     <li>eletrodomésticos</li><br> 
 
-    <a href="index.html"> Voltar ao menu principal</a>
+    <a href="index.html"> Voltar ao menu principal</a><br>
+    <a href="obrigado.html">Sair</a>
 
 </body>
 </html>
